--- a/package.json
+++ b/package.json
@@ -7,12 +7,25 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.1.2",
     "react-scripts": "^4.0.3",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
